--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@tinymce/tinymce-vue": "^2.0.0",
     "axios": "^0.18.0",
     "element-ui": "^2.7.2",
     "sass-loader": "^7.1.0",
+    "tinymce": "^5.0.4",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
